src/static/scss/components/_header.scss
@use '../mixins' as mixins;

#site-header {
  position: relative;
  top: 0;
  z-index: 3;
  background-color: var(--color-background);
  justify-content: space-between;
  border-bottom: 1px solid var(--color-highlight);

  a {
    text-decoration: none;
  }

  nav {
    visibility: visible;
    max-width: 1000px;
    margin-left: 2em;
    @include mixins.default-transition(margin-left, max-width);

    a {
      color: inherit;
      font-weight: bold;

      &[aria-current="page"] {
        text-decoration: underline;
        text-decoration-color: var(--color-accent);
      }
    }
  }

  #title {
    font-weight: bold;
    font-size: 1.5em;
    color: var(--color-title);
    white-space: nowrap;
  }

  button {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border: none;
    background-color: inherit;
    color: inherit;
    cursor: pointer;
    padding: 0.5em;
    border-radius: 50%;
    height: 48px;
    width: 48px;
    transition: background-color 250ms ease-in-out;

    svg {
      height: 24px;
      width: 24px;
    }

    &:hover {
      background-color: var(--color-highlight);
    }
  }

  #theme-btn {
    .feather-sun {
      display: block;
    }
    .feather-moon {
      display: none;
    }
  }

  #menu-btn {
    visibility: hidden;
    margin-left: 0;
    max-width: 0;
    padding: 0;

    @include mixins.default-transition(margin-left, padding, max-width);
  }

  @media screen and (max-width: 999px) {
    position: sticky;
  }

  @media screen and (max-width: 599px) {
    nav {
      visibility: hidden;
      margin-left: 0;
      max-width: 0;
    }

    #menu-btn {
      visibility: visible;
      margin-left: 0.5em;
      padding: 0.5em;
      max-width: 100px;
    }
  }
}

html.dark #site-header #theme-btn {
  .feather-sun {
    display: none;
  }
  .feather-moon {
    display: block;
  }
}

